[package]
name = "email_sigs"
version = "0.1.0"
edition = "2021"
[[bin]]
name = "email-sigs"
test = false
bench = false

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
osascript = "0.3.0"
serde = "1"
serde_json = "1"
serde_derive = "1"
chumsky = "0.9.2"
lexopt = "0.3.0"
indexmap = "1.9.3"
exit-code = "1.0.0"
